driver-sns-sqs/deploy-low-cost/provision-sns-sqs-aws.tf
# Create a VPC to launch our instances into
resource "aws_vpc" "benchmark_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Benchmark-VPC-SNS-SQS-${random_id.hash.hex}"
  }
}

# Create an internet gateway to give our subnet access to the outside world
resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.benchmark_vpc.id
}

# Grant the VPC internet access on its main route table
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.benchmark_vpc.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default.id
}

# Create a subnet to launch our instances into
resource "aws_subnet" "benchmark_subnet" {
  vpc_id                  = aws_vpc.benchmark_vpc.id
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
  availability_zone       = var.az
}

resource "aws_security_group" "benchmark_security_group" {
  name   = "terraform-sns-sqs-${random_id.hash.hex}"
  vpc_id = aws_vpc.benchmark_vpc.id

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # All ports open within the VPC
  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Benchmark-Security-Group-SNS-SQS-${random_id.hash.hex}"
  }
}

resource "aws_key_pair" "auth" {
  key_name   = "${var.key_name}-${random_id.hash.hex}"
  public_key = file(var.public_key_path)
}

resource "aws_iam_instance_profile" "sns_sqs_ec2_instance_profile" {
  name = "sns_sqs_ec2_instance_profile"

  role = "sns-sqs-iam-role"
}

resource "aws_spot_instance_request" "client" {
  ami                    = var.ami
  instance_type          = var.instance_types["client"]
  key_name               = aws_key_pair.auth.id
  subnet_id              = aws_subnet.benchmark_subnet.id
  vpc_security_group_ids = [aws_security_group.benchmark_security_group.id]
  availability_zone      = var.az
  spot_type              = "one-time"
  wait_for_fulfillment   = true
  count                  = var.num_instances["client"]

  iam_instance_profile = aws_iam_instance_profile.sns_sqs_ec2_instance_profile.name

  user_data = <<-EOF
    #!/bin/bash
    echo "export SNS_URIS=${var.sns_uris}" >> /etc/profile.d/myenvvars.sh
    echo "export REGION=eu-west-1" >> /etc/profile.d/myenvvars.sh
    echo "export PRODUCE_WITH_ALL_WORKERS=true" >> /etc/profile.d/myenvvars.sh
    echo "SNS_URIS=${var.sns_uris}" >> /etc/environment
    echo "REGION=eu-west-1" >> /etc/environment
    echo "PRODUCE_WITH_ALL_WORKERS=true" >> /etc/environment
    echo "SKIP_READINESS_CHECK=true" >> /etc/environment
    EOF

  tags = {
    Name = "sns_sqs_client_${count.index}"
  }
}

output "client_ssh_host" {
  value = aws_spot_instance_request.client[0].public_ip
}
